0.11cvs

* step/next can now take a count. E.g. step 2 or next 3.

* Show more accurate and useful location when we are stopped on an exec.

* Stack trace now reports exec positions a little bit better - 
  it doesn't call it a file.

* pydb.el updated for expanded commands

* set prompt allows embedded blanks and punctiation. Still have problems
  with trailing blanks.

* Add a disassemble command.

* Add line tracing via "set linetrace"

* show with no parameters is like gdb: shows all subcommands.

* Class name back to Pdb to make interaction with other programs like 
  ipython more transparent. The *module* name is Pydb, so one must either
  "import pydb" or import "pdb" (stock debugger).

0.10
2006-01-12

First release of extended python debugger.

* Add gdb frame command

* Add gdb run (restart) command

* Add some "set"/"show" commands:
    args, listsize, version (no set here), dialect

* up/down can take a number of frames to move.

* Stepping skips over "def" statements.

* Document retval

* Add info commands ("args", "break", "line', "locals" and "source")

* Add examine command analogous to Perl's.

* up/down work like gdb's (when gdb dialect is in effect).
  Can supply an optional number of frames to go up/down.

* step/next skip over "def" commands.