@@ -1,5 +1,10 @@
 0.11cvs
 
+* Add line tracing via "set linetrace". Allow a delay in linetracing:
+   "set linetrace delay *float*" (delay is useful in front-end GUIs)
+
+* Non-interactive line tracing a la POSIX shells with -x or --trace
+
 * step/next can now take a count. E.g. step 2 or next 3.
 
 * Show more accurate and useful location when we are stopped on an exec.
@@ -14,13 +19,13 @@
 
 * Add a disassemble command.
 
-* Add line tracing via "set linetrace"
-
 * show with no parameters is like gdb: shows all subcommands.
 
 * Class name back to Pdb to make interaction with other programs like 
   ipython more transparent. The *module* name is Pydb, so one must either
   "import pydb" or import "pdb" (stock debugger).
+
+* Add debugger command options (e.g. --batch)
 
 0.10
 2006-01-12
